Fix search dropdown alignment

--- a/src/theme/SearchBar/algolia.css
+++ b/src/theme/SearchBar/algolia.css
@@ -255,13 +255,15 @@
 }
 
 @media (min-width: 601px) {
+  /* Align dropdown with the search input (avoid overflowing off-screen to the right) */
   .algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu {
-    right: 0 !important;
-    left: inherit !important;
+    left: 0 !important;
+    right: auto !important;
   }
 
   .algolia-autocomplete.algolia-autocomplete-right .ds-dropdown-menu:before {
-    right: 48px;
+    left: 24px;
+    right: auto;
   }
 
   .algolia-autocomplete .ds-dropdown-menu {
